kubernetes/be-mirror-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose-prod.yaml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: be-mirror
    pod-security.kubernetes.io/enforce: privileged    
  name: be-mirror
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: be-mirror
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose-prod.yaml
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: be-mirror
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: be-mirror
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsUser: 999
            runAsGroup: 999
          args:
            - uvicorn
            - app.main:app
            - --host
            - 0.0.0.0
            - --port
            - "8000"
            - --root-path
            - /app
            - --proxy-headers
            - --workers
            - "4"
          image: cerit.io/wernad/be-mirror:1.0
          imagePullPolicy: Always
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - http://localhost:8000/api/v1/files/ping
            failureThreshold: 5
            periodSeconds: 5
            timeoutSeconds: 5
          ports:
            - containerPort: 8000
              protocol: TCP
          resources:
            limits:
              cpu: "1"
              memory: "2147483648"
      restartPolicy: Always
