kubernetes/be-mirror-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose-prod.yaml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: be-mirror
  name: be-mirror
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    io.kompose.service: be-mirror
