kubernetes/pg-mirror-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose-prod.yaml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: pg-mirror
  name: pg-mirror
spec:
  ports:
    - name: "5435"
      port: 5435
      targetPort: 5432
  selector:
    io.kompose.service: pg-mirror
